fix for being too low

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -148,7 +148,6 @@ img {
 
 /* Nightmare glyph */
 .nightmare {
-  background-image: url('https://i.imgur.com/x5XoktW.png');
-  height: 16px;
+  margin-top: -3px;
 }
 
